# allsolve-sdk-python

./: .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements_dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
examples/: .env.default  README.md  requirements.txt
examples/bending_beam/: README.md  bending_beam.py  bending_beam_from_yaml.py  bending_beam_sweep.py  bending_beam_sweep.yaml  visualize_bending_beam_sweep_results.py
examples/combdrive_eigenmodes/: Comb_drive_Accelerometer.gds  README.md  combdrive_eigenmodes.py  combdrive_eigenmodes.yaml  requirements.txt  visualize_combdrive_eigenmodes.py
examples/edit_project/: README.md  edit_project.py
examples/full_script_template/: README.md  cube.geo  main.py  requirements.txt
examples/full_script_template/sim/: main.py
examples/geometric_sweep/: README.md  control.py  geo.py  requirements.txt  sweep.py
examples/hello_world/: hello_world.py
examples/import_geom/: README.md  main.py  requirements.txt
examples/import_project/: README.md  cube.step  example.csv  import-format.json  import-format.yaml  main.py  requirements.txt
examples/lumped_pull_in_analysis/: Lumped_pull-in_analysis.yaml  README.md  lumped_pull_in_analysis.py  requirements.txt  visualize_pull_in_results.py
examples/optimization/: README.md  optimizede.py  optimizelsq.py  requirements.txt
examples/permanent_magnet/: README.md  main.py  requirements.txt
examples/pin_fin_heat_sink/: README.md  heat_sink_demo.py  heat_sink_demo.yaml
examples/pmut_array/: README.md  pmut_array_demo.py  pmut_array_demo.yaml  requirements.txt  visualize_pmut_array_results.py
examples/simple_sweep/: requirements.txt  sweep.py
examples/surrogate_model/: README.md  requirements.txt  surrogate_model.py
src/allsolve/: __init__.py  api.py  client.py  export_format.py  export_project.py  expression.py  file.py  http_transfer.py  import_project.py  intcomp.py  job.py  job_mixin.py  material.py  mesh.py  override.py  project.py  quota.py  region.py  token.py  util.py  varint.py
src/allsolve_rawapi/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
src/quanscient-stubs/: __init__.pyi
tests/: README.md  conftest.py  test_smoke_bending_beam.py
(+216 files in other folders)
